Internationalize noitification message text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Fisify</string>
+    <string name="notification_text">Tu próxima sesión está lista</string>
 </resources>
