--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Fisify</string>
     <string name="notification_text">Tu próxima sesión está lista</string>
+    <string name="default_notification_channel_id">1</string>
 </resources>
